few markup changes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
-  <title>Editor++: Responsive Product Template</title>
+  <title>Editor-X: Responsive Product Template</title>
   <meta name="description" content="A free responsive website template using Materialize, inspired by Forkio template from Codrops by Pixel Buddha and PSD2HTML">
   <meta name="keywords" content="website template, css3, one page, materialize, app template, web app, start-up">
   <meta name="author" content="nitinsaroha">
@@ -35,7 +35,7 @@
   
   <nav class="white" id="nav" role="navigation">
       <div class="nav-wrapper">
-        <a id="lgo-container" href="#" class="brand-logo green-text">Editor++</a>
+        <a id="lgo-container" href="#" class="brand-logo green-text">Editor-X</a>
         <ul class="right big-nav">
           <li><a href="#">Overview</a></li>
           <li><a href="#">About Fork</a></li>
@@ -60,7 +60,7 @@
     <div class="section" id="index-banner">
       <div class="black lighten-1 white-text">
         <br><br>
-        <h1 class="header center">Editor++ App</h1>
+        <h1 class="header center">Editor-X App</h1>
         <div class="row center">
           <h5 class="header col s12 light">A real Game changer in the game of Web Development</h5>
           <h6 class="header col s12 light">Version 2.8 for Mac and Windows</h6>
@@ -181,7 +181,7 @@
     <div class="section teal darken-2">
         <br>
         <div class="container white-text">
-          <h3 class="header center">People Are Talking about Editor++</h3>
+          <h3 class="header center">People Are Talking about Editor-X</h3>
           <br><br>
           <div class="row center italic">
             <div class="col s12 m4 l4">
@@ -301,7 +301,7 @@
       <div class="row">
 
         <div class="col l4 m4 s12 ft-center">
-          <h5 class="white-text">Editor++</h5>
+          <h5 class="white-text">Editor-X</h5>
           <p class="grey-text text-lighten-4">Lorem ipsum dolor sit amet, feugiat delicat liberavisse id cum no quo.</p>
         </div>
 
@@ -323,7 +323,7 @@
                 <a href="tel:987654321" class="phone-number black-text">987 654 3210</a>
                 <h6 class="available">Available from 12PM - 18PM</h6>
                 <h5>New York, NY</h5>
-                <address>560 Judah St &amp; 15th Ave, Apt 5 San Francisco, CA, 230903</address>
+                <address>56560 Judas St &amp; 150th Ave, Apt 50 San Francisco, CA, 230215</address>
               </strong>
           </div>
         </div>
