few markup changes

--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
     </div>
     <div class="footer-copyright">
       <div class="container">
-      Made by <a class="red-text text-lighten-4" href= "https://github.com/nitinsaroha">nisaro</a>
+      Made by <a class="red-text text-lighten-4" href= "https://github.com/nitinsaroha">nitinsaroha</a>
       </div>
     </div>
   </footer>
